# Lengine_old

./: .gitignore  .gitmodules  CGE.sln  CMakeLists.txt  README.txt
CGE/: Alias.hpp  AudioClip.hpp  AudioEngine.cpp  AudioEngine.hpp  AudioSource.hpp  CGE.APS  CGE.cpp  CGE.filters  CGE.h  CGE.hpp  CGE.vcxproj  CGE.vcxproj.filters  CMakeLists.txt  Camera.cpp  Camera.hpp  Colour.cpp  Colour.h  Colour.hpp  Colour_Map.cpp  Colour_Map.h  Component.cpp  Component.hpp  ConsoleWindow.cpp  ConsoleWindow.hpp  Delegate.hpp  DrawCall.hpp  ECS.cpp  ECS.hpp  File.cpp  File.hpp  FileSerializer.hpp  Frustum.hpp  FunctionTraits.hpp  GameObject.cpp  GameObject.hpp  Graphics.cpp  Graphics.hpp  Hash.hpp  HeapList.hpp  Image.h  (+75 more)
CGE/PackagedResources/: landscape.texture  len.texture
CGE/Resources/: manifest.json
CGE/TestFiles/: somefile.txt
CGE/entt/core/: any.hpp
CGE/entt/entity/: organizer.hpp  registry.hpp
CGE/x64/Debug/: vc142.idb
CGE/x64/Debug/CGE.tlog/: CGE.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CGE_ResourcePackager/: CGE_ResourcePackager.cpp  CGE_ResourcePackager.vcxproj  CGE_ResourcePackager.vcxproj.filters
ConsoleDock/: ConsoleDock.vcxproj  Main.cpp
Dependencies/stb/: stb_image.hpp
Lengine-Core/: Any.hpp  AudioClip.hpp  AudioListener.hpp  AudioSource.hpp  CGE.cpp  CGE.hpp  Camera.hpp  Colour.hpp  Component.hpp  ConsoleColour.hpp  ConsoleGL.cpp  ConsoleGL.hpp  ConsoleRendering.hpp  ConsoleWindow.hpp  File.hpp  FunctionTraits.hpp  GameObject.hpp  Input.cpp  Light.hpp  Material.cpp  Material.hpp  Math.hpp  Mesh.hpp  MeshRenderer.hpp  Pixel.hpp  PixelColourMap.cpp  PixelColourMap.hpp  Pointer.hpp  Prefab.hpp  RawFileResource.hpp  RenderPipeline.hpp  RenderQueue.hpp  Renderer.hpp  Rendering.cpp  Rendering.hpp  RenderingAPI.hpp  RenderingPipeline.cpp  RenderingPipeline.hpp  Resource.hpp  ScreenBuffer.hpp  (+10 more)
Lengine-Core/Backends/Rendering/: Implementation_ConsoleGL.cpp  Implementation_OpenGL.cpp
Lengine-Core/Implementation/Shader/: ConsoleGLShader.cpp  ConsoleGLShader.hpp  OpenGLShader.cpp  OpenGLShader.hpp
Lengine-Core/Implementation/VertexBuffer/: ConsoleGLVertexBuffer.cpp  ConsoleGLVertexBuffer.hpp
Lengine-Example/: CameraController.hpp  Main.cpp
Lengine-ResourcePackager/: Main.cpp  ResourcePackager.cpp  ResourcePackager.hpp
ResourceCompiler/: ResourceCompiler.cpp  ResourceCompiler.vcxproj  ResourceCompiler.vcxproj.filters
ResourcePackager/: CMakeLists.txt  Main.cpp  Miniz.cpp  Miniz.hpp  OFBX.cpp  OFBX.hpp  ResourcePackager.cpp  ResourcePackager.hpp  ResourcePackager.vcxproj  ResourcePackager.vcxproj.filters  TOBJ.hpp  manifest.json
ResourcePackager/Dependencies/Assimp/lib/x64/: assimp.lib
ResourcePackager/Dependencies/assimp-3.3.1/assimp-3.3.1/test/models-nonbsd/BLEND/: Bob.blend  fleurOptonl.blend
ResourcePackager/Dependencies/assimp-3.3.1/assimp-3.3.1/test/models-nonbsd/MD3/: water_can.tga
ResourcePackager/Dependencies/assimp-3.3.1/assimp-3.3.1/test/models-nonbsd/MD3/q3root/models/mapobjects/kt_kubalwagon/: euro_frnt_2.tga  european_fnt.tga
ResourcePackager/Dependencies/assimp-3.3.1/assimp-3.3.1/test/models/BLEND/: 4Cubes4Mats_248.blend  AreaLight_269.blend  BlenderDefault_248.blend  BlenderDefault_250.blend  BlenderDefault_250_Compressed.blend  BlenderDefault_262.blend  BlenderDefault_269.blend  BlenderDefault_271.blend  BlenderMaterial_269.blend  CubeHierarchy_248.blend  HUMAN.blend  MirroredCube_252.blend  NoisyTexturedCube_VoronoiGlob_248.blend  SmoothVsSolidCube_248.blend  SuzanneSubdiv_252.blend  Suzanne_248.blend  TexturedCube_ImageGlob_248.blend  TexturedPlane_ImageUvPacked_248.blend  TexturedPlane_ImageUv_248.blend  TorusLightsCams_250_compressed.blend  blender_269_regress1.blend  yxa_1.blend
ResourcePackager/Dependencies/assimp-3.3.1/assimp-3.3.1/test/models/LWO/LXOB_Modo/: CrazyEngine.lxo  sphereWithVertMap.lxo
ResourcePackager/Dependencies/assimp-3.3.1/assimp-3.3.1/test/models/X/: bottom.tga  top.tga  updown.tga
ResourcePackager/Resources/: len.jfif  manifest.json  soulspear_diffuse.tga  test.fbx
ResourcePackager/SomeFolder/: siegi.jfif  someimage.image  test.fbx
ResourcePackager/Spear/: soulspear_normal.tga
ResourcePackager/Temp/: grass.mesh  landscape.texture2d  len.texture2d  model.mesh  plane.mesh  stanford.mesh
Resources/: manifest.json
Resources/House/: farmhouse.mtl
TestProject/: CMakeLists.txt  Main.cpp  TestProject.vcxproj
TestProject/Resources/: ResourcePackager.bat  manifest.json
TestProject/Resources/Spear/: soulspear_specular.tga
TestProject/Resources/Temp/: grass.mesh  landscape.texture  landscape.texture2d  len.texture  plane.mesh  spear.mesh  stanford.mesh
TestProject/assimp/lib/: assimp-vc140-mt.exp  assimp-vc140-mt.lib
x64/Debug/: CGE.ilk
x64/Release/: CGE.iobj  CGE.ipdb
